# dsa_pi

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 22120d431079_adding_categories_column_and_table.py  233c563b587f_adding_categories_column_and_table.py  29c5ece04758_first_revision_from_the_models_for_the_.py  30c0876fceac_adding_categories_column_and_table.py  3f18e21f1a66_create_table_using_models.py  600fcfa69f98_create_table_using_models.py  60b304a0e5c6_adding_difficulty_column_into_the_.py  8ce92f0ef80e_making_title_not_nullable.py
app/: config.py  database.py  main.py  models.py  schemas.py
