[tool.poetry]
name = "dsa-pi"
version = "0.1.0"
description = "This is an api to get questions for practice."
authors = ["exoutia <jhav365@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
fastapi = {extras = ["all"], version = "^0.104.0"}
SQLAlchemy = "^2.0.22"
alembic = "^1.12.1"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"
pandas = "^2.1.2"

[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
pyperclip = "^1.8.2"
beautifulsoup4 = "^4.12.2"
jupyter = "^1.0.0"
lxml = "^4.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
